nobase_dist_include_HEADERS =	libgeneral/macros.h \
								libgeneral/exception.hpp
if !BUILD_MINIMAL
nobase_dist_include_HEADERS +=	libgeneral/Event.hpp \
								libgeneral/DeliveryEvent.hpp \
								libgeneral/lck_container.hpp \
								libgeneral/Manager.hpp \
								libgeneral/Utils.hpp
endif
