nobase_dist_include_HEADERS =	libgeneral/macros.h \
								libgeneral/ByteOrder.hpp \
								libgeneral/exception.hpp
if !BUILD_MINIMAL
nobase_dist_include_HEADERS +=	libgeneral/Event.hpp \
								libgeneral/DeliveryEvent.hpp \
								libgeneral/GuardAccess.hpp \
								libgeneral/Manager.hpp \
								libgeneral/Mem.hpp \
								libgeneral/Utils.hpp
endif
